--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,6 @@ jobs:
         dotnet build Material.Icons.Avalonia
         dotnet pack Material.Icons.Avalonia
     - name: Publish to Nuget
-      run: dotnet nuget push "Material.Icons.Avalonia\bin\Debug\*.nupkg" --api-key ${{secrets.NUGET_KEY}} --source https://api.nuget.org/v3/index.json --skip-duplicate
+      run: dotnet nuget push "Material.Icons.Avalonia/bin/Debug/*.nupkg" --api-key ${{secrets.NUGET_KEY}} --source https://api.nuget.org/v3/index.json --skip-duplicate
     - name: Publish to GitHub Packages
-      run: dotnet nuget push "Material.Icons.Avalonia\bin\Debug\*.nupkg" --api-key ${{secrets.GITHUB_TOKEN}} --source https://nuget.pkg.github.com/AvaloniaUtils/index.json --skip-duplicate
+      run: dotnet nuget push "Material.Icons.Avalonia/bin/Debug/*.nupkg" --api-key ${{secrets.GITHUB_TOKEN}} --source https://nuget.pkg.github.com/AvaloniaUtils/index.json --skip-duplicate
