Update links in csproj

--- a/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
+++ b/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
@@ -7,9 +7,9 @@
         <Title>Material.Icons.Avalonia</Title>
         <Authors>SKProCH</Authors>
         <Description>Avalonia control for display material icons from Material.Icons</Description>
-        <PackageProjectUrl>https://github.com/SKProCH/Material.Icons/</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/SKProCH/Material.Icons/blob/master/LICENSE</PackageLicenseUrl>
-        <RepositoryUrl>https://github.com/SKProCH/Material.Icons.git</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/AvaloniaUtils/Material.Icons.Avalonia/</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/AvaloniaUtils/Material.Icons.Avalonia/blob/master/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/AvaloniaUtils/Material.Icons.Avalonia.git</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <PackageTags>material icons material-design google-material avalonia</PackageTags>
     </PropertyGroup>
