Update to AvaloniaUI 11.0.0-preview1 and bump version

--- a/Material.Icons.Avalonia.Demo/Material.Icons.Avalonia.Demo.csproj
+++ b/Material.Icons.Avalonia.Demo/Material.Icons.Avalonia.Demo.csproj
@@ -15,10 +15,11 @@
         <AvaloniaResource Include="Assets\**" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="0.10.0" />
-        <PackageReference Include="Avalonia.Desktop" Version="0.10.0" />
-        <PackageReference Include="Avalonia.Diagnostics" Version="0.10.0" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0" />
+        <PackageReference Include="Avalonia" Version="11.0.0-preview1" />
+        <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview1" />
+        <PackageReference Include="Avalonia.Diagnostics" Version="11.0.0-preview1" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview1" />
+        <PackageReference Include="Avalonia.Themes.Default" Version="0.10.999-cibuild0022654-beta" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Material.Icons.Avalonia\Material.Icons.Avalonia.csproj" />
