Fix default avalonia 11 theme in demo. Thanks @Whiletru3

--- a/Material.Icons.Avalonia.Demo/Material.Icons.Avalonia.Demo.csproj
+++ b/Material.Icons.Avalonia.Demo/Material.Icons.Avalonia.Demo.csproj
@@ -19,7 +19,7 @@
         <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview1" />
         <PackageReference Include="Avalonia.Diagnostics" Version="11.0.0-preview1" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview1" />
-        <PackageReference Include="Avalonia.Themes.Default" Version="0.10.999-cibuild0022654-beta" />
+        <PackageReference Include="Avalonia.Themes.Simple" Version="11.0.0-preview1" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Material.Icons.Avalonia\Material.Icons.Avalonia.csproj" />
